[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_screen/large_asteroid/assets/FlatAsteroid007-toon.png" type="Texture" id=1]
[ext_resource path="res://game_screen/large_asteroid/LargeAsteroid.gd" type="Script" id=2]
[ext_resource path="res://game_screen/large_asteroid/assets/music_Rolling-theme.wav" type="AudioStream" id=3]

[node name="LargeAsteroid" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="RollinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.0

[node name="ResourcePoints" type="Node2D" parent="."]

[node name="ResourcePoint1" type="Node2D" parent="ResourcePoints"]
position = Vector2( 327.613, -556.947 )
rotation = 0.92677

[node name="ResourcePoint2" type="Node2D" parent="ResourcePoints"]
position = Vector2( 424.574, -455.639 )
rotation = 1.12225

[node name="ResourcePoint3" type="Node2D" parent="ResourcePoints"]
position = Vector2( 506.835, -314.859 )
rotation = 1.26885

[node name="ResourcePoint4" type="Node2D" parent="ResourcePoints"]
position = Vector2( 546.283, -4.28717 )
rotation = 1.80816

[node name="ResourcePoint5" type="Node2D" parent="ResourcePoints"]
position = Vector2( 496.983, 247.449 )
rotation = 1.87623

[node name="ResourcePoint6" type="Node2D" parent="ResourcePoints"]
position = Vector2( 401.048, 406.924 )
rotation = 1.97746

[node name="ResourcePoint7" type="Node2D" parent="ResourcePoints"]
position = Vector2( 298.208, 511.981 )
rotation = 2.56389

[node name="ResourcePoint8" type="Node2D" parent="ResourcePoints"]
position = Vector2( 152.586, 578.272 )
rotation = 2.74889

[node name="ResourcePoint9" type="Node2D" parent="ResourcePoints"]
position = Vector2( -160.376, 609.392 )
rotation = -2.71748

[node name="ResourcePoint10" type="Node2D" parent="ResourcePoints"]
position = Vector2( -268.017, 544.607 )
rotation = -2.39285

[node name="ResourcePoint11" type="Node2D" parent="ResourcePoints"]
position = Vector2( -384.795, 441.033 )
rotation = -2.30558

[node name="ResourcePoint12" type="Node2D" parent="ResourcePoints"]
position = Vector2( -498.601, 257.485 )
rotation = -1.81689

[node name="ResourcePoint13" type="Node2D" parent="ResourcePoints"]
position = Vector2( -545.328, 0.201749 )
rotation = -1.57778

[node name="ResourcePoint14" type="Node2D" parent="ResourcePoints"]
position = Vector2( -486.985, -256.454 )
rotation = -1.38579

[node name="ResourcePoint15" type="Node2D" parent="ResourcePoints"]
position = Vector2( -397.694, -422.47 )
rotation = -0.74002

[node name="ResourcePoint16" type="Node2D" parent="ResourcePoints"]
position = Vector2( -200.584, -545.428 )
rotation = -0.436332

[node name="ResourcePoint17" type="Node2D" parent="ResourcePoints"]
position = Vector2( 200.378, -609.529 )
rotation = 0.349066

[node name="PortalPoints" type="Node2D" parent="."]

[node name="PortalPoint1" type="Node2D" parent="PortalPoints"]
position = Vector2( 2.71459, -630.089 )
z_index = 1

[node name="PortalPoint2" type="Node2D" parent="PortalPoints"]
position = Vector2( -0.752152, 630.54 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24.4697, -628.881, -74.8804, -606.276, -144.176, -578.558, -265.758, -508.632, -356.473, -453.196, -442.777, -383.9, -453.487, -368.781, -481.205, -295.076, -489.394, -244.679, -508.293, -181.683, -520.893, -150.185, -525.302, -109.237, -544.831, -22.9327, -544.831, 84.7905, -542.941, 101.169, -536.642, 161.646, -528.452, 189.364, -501.994, 247.32, -490.024, 310.946, -473.016, 350.004, -447.187, 390.321, -415.689, 418.67, -354.583, 462.767, -292.847, 520.093, -252.529, 559.151, -182.604, 602.618, -129.057, 617.737, -45.2725, 628.446, 4.49445, 632.226, 58.671, 613.957, 159.465, 575.53, 270.968, 528.283, 342.783, 481.666, 395.7, 420.559, 433.497, 363.233, 466.885, 313.466, 529.881, 183.064, 541.851, 138.337, 538.701, 111.249, 544.371, 54.5523, 547.52, -17.2632, 541.851, -70.1798, 542.481, -119.317, 535.551, -159.004, 528.622, -247.199, 516.022, -284.366, 505.313, -322.164, 466.885, -385.16, 441.687, -436.817, 414.599, -470.205, 377.431, -504.853, 356.642, -530.051, 319.475, -563.439, 262.845, -585.227, 208.5, -608.391, 125.201, -629.327, -11.1062, -630.663 )
